--- a/c.html
+++ b/c.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="card text-center">
-    <img src="picture/PC.jpg" class="card-img-top" alt="...">
+    <img src="picture/PC3.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">全新10代CPU★世界最小15.6吋機身ASUS ZenBook 15 UX534FTC 冰柱銀</h5>
       <p class="card-text">LCD尺寸：15.6’//Narrow border//300nits//FHD 1920x1080 16:9
